--- a/sourse/pug/pages/modal/policy-modal.pug
+++ b/sourse/pug/pages/modal/policy-modal.pug
@@ -1,7 +1,7 @@
 include ../../layout/include.pug
 
 +b.modal-win--policy
-	+e.inner
+	+e.inner.custom-scroll()
 		h4.text-center Политика обработки персональных данных в МГУУ Правительства Москвы
 		- for (var x = 0; x < 3; x++)
 			h5.text-center 1. Общие положения
