--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -1,7 +1,7 @@
 $default-font: "Circe";
 // $file-form: ($file-formats: woff2 woff ttf);
 $addr: '../fonts/';
-$file-format: woff2;
+$file-format: woff;
 
 
 // If font from googlefont, next lines remove
