--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -17,6 +17,7 @@
 	padding: 40px;
 		h4{
 			text-wrap: balance;
+			
 		}
 		h5,
 		p{
@@ -24,22 +25,28 @@
 		}
 	border-radius: $border-radius;
 	&__inner{
-		overflow-y: auto;
-		@extend .custom-scroll;
+		overflow-y: hidden;
+		height: 100%;
+		// @extend .custom-scroll;
 		@include media-breakpoint-up(md) {
 
 			padding-right: rem(48);
 		} 
 		padding-right: rem(4);
 	}
+	li,
+	p{
+		// @include rfs(22px);
+		@include media-breakpoint-up(md) {
+			font-size: rem(22);
+		}
+		font-size: 18px;
+	}
 	&--thanks{
 		width: rem(800);
 		background: #CCF2F0;
 		// height: 2px;
 		font-weight: bold;
-		p{
-			@include rfs(22px);
-		}
 		h2{
 			color: #41B2AB;
 		}
@@ -58,7 +65,7 @@
 		padding: rem(56) rem(16) rem(16);  
 		padding-right: 4px;
 		width: 832px;
-		max-height: 100%;
+		max-height: calc(100% - 40px);
 	
 	}
 
@@ -246,4 +253,9 @@ h5{
 	.fancybox__slide{
 		padding: 16px;
 	}
+}
+
+
+.fancybox__slide{
+	overflow: hidden;
 }
