--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -3,13 +3,15 @@ mixin allcss()
 	//- link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox/fancybox.css", rel="stylesheet")
 	//- link(href=`css/main.min.css?v=${version}`, rel="stylesheet")
+	link(href=`libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css`, rel="stylesheet")
 	link(href=`css/main.min.css`, rel="stylesheet")
 
 mixin allcjs() 
-	//- script(src="libs/jquery/jquery.min.js")
+	script(src="libs/jquery/jquery.min.js")
 	script(src="libs/@fancyapps/ui/fancybox/fancybox.umd.js") 
 	//- script(src="libs/swiper/swiper-bundle.min.js")  
 	script(src="libs/inputmask/inputmask.min.js") 
 	//- script(src=`js/common.js?v=${version}`)
+	script(src=`libs/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js`)
 	script(src=`js/JSCCommon.js`)
 	script(src=`js/common.js`)
