--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -99,6 +99,9 @@ body {
 	position: relative;
 	width: 100%;
 	overflow: hidden;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1600px;
 	// display: flex;
 	// flex-direction: row; 
 // /	overflow: scroll;
@@ -551,15 +554,33 @@ iframe {
 .container{
 	margin-left: auto;
 	margin-right: auto;
-	max-width: calc(1600px - 168px * 2 + 32px);
-	padding-left: 16px;
-	padding-right: 16px;
+	max-width: calc(1600px );
+	@include media-breakpoint-up(lg) {
+		--gutter-x: 168px;
+	}
+	
+	@include media-breakpoint-up(md) {
+		--gutter-x: 64px;
+	}
+
+	@include media-breakpoint-up(sm) {
+		--gutter-x: 32px;
+	}
+	--gutter-x: 16px;
+	
+
+	padding-left: var(--gutter-x);
+	padding-right: var(--gutter-x);
 
 }
 
 h1{
 	font-weight: bold;
-	line-height: calc(64 / 60);
+		@include media-breakpoint-up(sm) {
+
+			line-height: calc(64 / 60);
+		}
+		line-height: 1.5;
 	text-wrap: balance;
 	margin-bottom: 1em;
 	@include media-breakpoint-down(sm) {
@@ -584,4 +605,21 @@ h1{
 .form-control.is-invalid, .was-validated .form-control:invalid {
 	background-image: none;
 	box-shadow: 0 0 0 1px   $danger !important;
+}
+.btn,
+.form-control{
+	@include media-breakpoint-down(sm) {
+		padding: rem(9.401) rem(12);
+	}
+}
+
+h4{
+	@include media-breakpoint-down(md){
+		font-size: 24px;
+	} 
+}
+h5{
+	@include media-breakpoint-down(md){
+		font-size: 20px;
+	}
 }
