--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -2,6 +2,9 @@
 	border-top: 1px solid var(--grey-medium, #C9CAD1); 
 	padding: rem(24) 0;
 	margin-top: auto;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1600px;
 	text-align: center; 
 	@include media-breakpoint-up(sm) {
 		font-size: rem(22);
