--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -1,12 +1,12 @@
 .form-wrap {
 	&__input-wrap {
 		// @extend .form-group;
-		margin-bottom: rem(24 + 18);
+		margin-bottom: rem(24 );
 		position: relative;
 		.invalid-feedback{
-			position: absolute;
-			left: 0;
-			top: calc(100% );
+			// position: absolute;
+			// left: 0;
+			// top: calc(100% );
 		}
 	}
 	&__input {
@@ -26,7 +26,7 @@
 		cursor: pointer;
 		margin-bottom: rem(24);
 		width: 100%;
-		margin-top: rem(50);
+		margin-top: rem(16);
 	}
 	label {
 		width: 100%;
