--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -17,7 +17,11 @@
 	padding: 40px;
 		h4{
 			text-wrap: balance;
+			text-align: center;
 			
+		}
+		h5{
+			text-align: center;
 		}
 		h5,
 		p{
@@ -30,9 +34,9 @@
 		// @extend .custom-scroll;
 		@include media-breakpoint-up(md) {
 
-			padding-right: rem(48);
+			padding-right: rem(56);
 		} 
-		padding-right: rem(4);
+		padding-right: 16px;
 	}
 	li,
 	p{
@@ -46,8 +50,8 @@
 		width: rem(800);
 		background: #CCF2F0;
 		// height: 2px;
-		font-weight: bold;
 		h2{
+			font-weight: bold;
 			color: #41B2AB;
 		}
 		@include media-breakpoint-up(md) {
@@ -60,10 +64,10 @@
 		@include media-breakpoint-up(md) {
 
 			padding: rem(56);
-			padding-right: 8px;
+			padding-right: 0;
 		}
-		padding: rem(56) rem(16) rem(16);  
-		padding-right: 4px;
+		padding: 56px 16px 16px;  
+		padding-right: 2px;
 		width: 832px;
 		max-height: calc(100% - 40px);
 	
