--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -101,7 +101,7 @@ body {
 	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1600px;
+	// max-width: 1600px;
 	// display: flex;
 	// flex-direction: row; 
 // /	overflow: scroll;
