--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -28,15 +28,18 @@
 			margin-bottom: rem(8);
 		}
 	border-radius: $border-radius;
-	&__inner{
+	.custom-scroll{
+
 		overflow-y: hidden;
 		height: 100%;
-		// @extend .custom-scroll;
 		@include media-breakpoint-up(md) {
-
+	
 			padding-right: rem(56);
 		} 
 		padding-right: 16px;
+	}
+	&__inner{
+		// @extend .custom-scroll;
 	}
 	li,
 	p{
