--- a/sourse/pug/pages/modal/policy-modal.pug
+++ b/sourse/pug/pages/modal/policy-modal.pug
@@ -1,11 +1,12 @@
 include ../../layout/include.pug
 
 +b.modal-win--policy
-	+e.inner.custom-scroll()
-		h4.text-center Политика обработки персональных данных в МГУУ Правительства Москвы
-		- for (var x = 0; x < 3; x++)
-			h5.text-center 1. Общие положения
-			p 1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.
-			p 1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.
-			p 1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.
-			p 1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц 
+	.custom-scroll()
+		+e.inner
+			h4.text-center Политика обработки персональных данных в МГУУ Правительства Москвы
+			- for (var x = 0; x < 3; x++)
+				h5.text-center 1. Общие положения
+				p 1.1. Политика обработки персональных данных в МГУУ Правительства Москвы (далее – Политика) разработана в соответствии с требованиями Федерального закона от 27 июля 2006 г. № 152-ФЗ «О персональных данных» в целях обеспечения защиты прав и свобод человека  и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную  и семейную тайну.
+				p 1.2. Политика действует в отношении всех персональных данных, которые МГУУ Правительства Москвы (далее – Университет) обрабатывает  как оператор.
+				p 1.3. Политика распространяется на отношения в области обработки персональных данных возникшие как до, так и после утверждения настоящей Политики.
+				p 1.4. Требования Политики распространяются на деятельность Университета в целом, обязательны для руководителей и работников структурных подразделений, участвующих в процессе обработки  и защиты персональных данных, а также для контрагентов – физических  и юридических лиц 
